--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-fetch": "2.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-modal": "^3.11.2",
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
